@@ -28,12 +28,12 @@ public class JsonArticleReader implements DataParser {
         JsonNode rootNode = mapper.readTree(this.reader);
 
         if (rootNode != null && rootNode.isArray()) {
-            int entryCount = 0;
-
+        	int entryCount = 0;
+        	
             for (JsonNode node : rootNode) {
-                entryCount++;
-                //skip empty nodes
-                if (node == null || node.isEmpty()) {
+            	entryCount++;
+            	//skip empty nodes
+            	if (node == null || node.isEmpty()) {
                     continue;
                 }
 
@@ -45,29 +45,47 @@ public class JsonArticleReader implements DataParser {
                     continue;
                 }
 
-                //ensure URI is not empty
+                //skip records with empty or missing URI (essential field)
                 if (uri.isEmpty()) {
-                    logger.error("Skipping malformed JSON entry " + entryCount + ": empty URI.");
+                	logger.error("Skipping JSON entry " + entryCount + ": missing or empty URI (essential field).");
                     continue;
-                }
-
+                }            	
+            	
                 //extract other fields
-                String date = node.has("date") && !node.get("date").isNull() ? node.get("date").asText() : "";
-                String title = node.has("title") && !node.get("title").isNull() ? node.get("title").asText() : "";
-                String body = node.has("body") && !node.get("body").isNull() ? node.get("body").asText() : "";
+                String date = node.has("date") ? node.get("date").asText() : "";
+                String title = node.has("title") ? node.get("title").asText() : "";
+                String body = node.has("body") ? node.get("body").asText() : "";
 
-                if (title == null || title.isBlank()) {
-                    logger.error("Skipping malformed JSON entry " + entryCount + ": missing or empty title.");
+                //skip records with empty or missing title (essential field)
+                if (title == null || title.trim().isEmpty()) {
+                    logger.error("Skipping JSON entry " + entryCount + " (URI: " + uri + "): missing or empty title (essential field).");
                     continue;
                 }
 
-                Article article = new Article(uri, date, title, body);
-                articles.put(uri, article);
+                // Check for empty date field
+                if (date == null || date.isBlank()) {
+                    logger.error("Skipping malformed JSON entry " + entryCount + ": missing or empty date.");
+                    continue;
+                }
+
+                // Check for empty body field
+                if (body == null || body.isBlank()) {
+                    logger.error("Skipping malformed JSON entry " + entryCount + ": missing or empty body.");
+                    continue;
+                }
+
+                try {
+                    Article article = new Article(uri, date, title, body);
+                    articles.put(uri, article);
+                } catch (IllegalArgumentException e) {
+                    // If Article constructor throws exception due to validation, skip the record
+                    logger.error("Skipping JSON entry " + entryCount + " (URI: " + uri + "): " + e.getMessage());
+                }
             }
         }
         logger.info("Successfully parsed " + articles.size() + " JSON articles.");
-
+        
         return articles;
-    }
+    }	
 
 }
